@@ -1,8 +1,8 @@
 #!/usr/bin/python
 
-import os, os.path, re, shutil, subprocess, sys
+import errno, os, os.path, re, shutil, subprocess, sys
 
-def main(source_dir, version=None):
+def main(source_dir, version):
     patch_dir = 'debian/patches'
     rt_patch_dir = 'features/all/rt'
     series_name = 'series-rt'
@@ -16,14 +16,28 @@ def main(source_dir, version=None):
                 old_series.add(name)
 
     with open(os.path.join(patch_dir, series_name), 'w') as series_fh:
-        # Add directory prefix to all filenames
-        def add_patch(name):
+        # Add directory prefix to all filenames.
+        # Add Origin to all patch headers.
+        def add_patch(name, source_patch, origin):
             name = os.path.join(rt_patch_dir, name)
+            path = os.path.join(patch_dir, name)
+            try:
+                os.unlink(path)
+            except OSError, e:
+                if e.errno != errno.ENOENT:
+                    raise
+            with open(path, 'w') as patch:
+                in_header = True
+                for line in source_patch:
+                    if in_header and line == '\n':
+                        patch.write('Origin: %s\n' % origin)
+                        in_header = False
+                    patch.write(line)
             series_fh.write(name)
             series_fh.write('\n')
             new_series.add(name)
 
-        if version:
+        if os.path.isdir(os.path.join(source_dir, '.git')):
             # Export rebased branch from stable-rt git as patch series
             up_ver = re.sub(r'-rt\d+$', '', version)
             args = ['git', 'format-patch', 'v%s..v%s-rebase' % (up_ver, version)]
@@ -35,18 +49,24 @@ def main(source_dir, version=None):
             with child.stdout as pipe:
                 for line in pipe:
                     name = line.strip('\n')
-                    add_patch(name)
+                    with open(os.path.join(patch_dir, rt_patch_dir, name)) as \
+                            source_patch:
+                        patch_from = source_patch.readline()
+                        match = re.match(r'From ([0-9a-f]{40}) ', patch_from)
+                        assert match
+                        origin = 'https://git.kernel.org/cgit/linux/kernel/git/rt/linux-stable-rt.git/commit?id=%s' % match.group(1)
+                        add_patch(name, source_patch, origin)
         else:
             # Copy patch series
+            up_ver = re.sub(r'(\d+\.\d+)(?:\.\d+)?-rt\d+$', r'\1', version)
+            origin = 'https://www.kernel.org/pub/linux/kernel/projects/rt/%s/patches-%s.tar.xz' % (up_ver, version)
             with open(os.path.join(source_dir, 'series'), 'r') as \
                     source_series_fh:
                 for line in source_series_fh:
                     name = line.strip()
                     if name != '' and name[0] != '#':
-                        shutil.copyfile(os.path.join(source_dir, name),
-                                        os.path.join(patch_dir, rt_patch_dir,
-                                                     name))
-                        add_patch(name)
+                        with open(os.path.join(source_dir, name)) as source_patch:
+                            add_patch(name, source_patch, origin)
                     else:
                         # Leave comments and empty lines unchanged
                         series_fh.write(line)
@@ -61,9 +81,8 @@ def main(source_dir, version=None):
         print 'Obsoleted patch', os.path.join(patch_dir, name)
 
 if __name__ == '__main__':
-    if len(sys.argv) not in [2, 3]:
-        print >>sys.stderr, '''\
-Usage: %s REPO RT-VERSION
-       %s QUILT-DIR''' % (sys.argv[0], sys.argv[0])
+    if len(sys.argv) != 3:
+        print >>sys.stderr, 'Usage: %s DIR RT-VERSION' % sys.argv[0]
+        print >>sys.stderr, 'DIR is either a git repo or quilt directory containing the given RT-VERSION.'
         sys.exit(2)
-    main(*sys.argv[1:])
+    main(sys.argv[1], sys.argv[2])
